# cmdpasco

./: README.md  pyproject.toml
.github/workflows/: python-app.yml
src/cmdpasco/: cmdpasco.py
